<!--<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.lehocz.constraintlayoutexample.MainActivity">
    <item
        android:id="@+id/action_start_game"
        android:orderInCategory="100"
        android:title="@string/action_start_game"
        app:showAsAction="always" />
</menu>-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_action_folder_closed"
        android:title="@string/item1"
        app:showAsAction="ifRoom|withText" />
    <group android:id="@+id/group">
        <item
            android:id="@+id/group_item1"
            android:icon="@drawable/ic_action_android"
            android:onClick="onGroupItemClick"
            android:title="@string/group_item1" />
        <item
            android:id="@+id/group_item2"
            android:icon="@drawable/ic_action_users"
            android:onClick="onGroupItemClick"
            android:title="@string/group_item2" />
    </group>
    <item
        android:id="@+id/submenu"
        android:title="@string/submenu_title"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/submenu_item1"
                android:title="@string/submenu_item1" />
        </menu>
    </item>
</menu>
